# mqtt_log_viewer

./: .gitignore  Cargo.toml  IMPROVEMENTS.md  PRD.md  README.md  TROUBLESHOOTING.md  clipboard.txt  config.toml  debug_key.txt  test_mqtt_sender.rs
.claude/: settings.local.json
migrations/: init.sql
src/: config.rs  main.rs
src/db/: models.rs  repository.rs
src/mqtt/: client.rs  handler.rs  mod.rs
src/ui/: app.rs  app_render.rs  events.rs  mod.rs
src/ui/views/: message_list.rs  mod.rs  payload_detail.rs  topic_list.rs
src/ui/widgets/: filter_bar.rs  mod.rs  status_bar.rs
src/utils/: json_formatter.rs  mod.rs
