[package]
name = "mqtt_log_view"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# MQTT client
rumqttc = "0.24"

# Database ORM
rbatis = "4.5"
rbdc = "4.5"
rbdc-sqlite = "4.5"
rbs = "4.5"

# TUI framework
crossterm = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions
regex = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
lazy_static = "1.4"
crossbeam-channel = "0.5"

# Windows API for direct key detection
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "consoleapi"] }

# 隱藏所有編譯器警告
[lints.rust]
warnings = "allow"